🔥 Aidez moi financièrement!

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,3 @@
-# Mes plateformes de donations
-
 github: [thealzhe]
-patreon: alzhetv
+patreon: thealzhe
 custom: ['https://www.paypal.com/donate/?hosted_button_id=ZRR7CWVL4Q556']
